# 04-ecosystem

./: Cargo.toml  README.md  cliff.toml  test.rest
examples/: rewrite_shortener.rs  shortener.rs
