[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
nanoid = "0.4.0"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["net", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
sqlx-db-tester = "0.4.2"
